# TinyVLA

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TinyVLA_Colab.ipynb  inference_tiny_vla.py  pyproject.toml  requirements.txt  test_setup.py  tiny_vla_dataset.py  tiny_vla_model.py  train_tiny_vla.py  utils.py
utils/: __init__.py  benchmark.py  debug.py
